--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "bot-coins-tk",
+  "name": "bot",
   "version": "1.0.0",
-  "description": "Bot completo de moedas, ranking e VIP",
-  "main": "index.js",
   "type": "module",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "main": "index.js",
   "dependencies": {
-    "discord.js": "^14.15.0",
+    "discord.js": "^14.14.1",
     "quick.db": "^9.0.0",
-    "ms": "^2.1.3"
+    "better-sqlite3": "^9.0.0"
   }
 }
